[gd_scene load_steps=4 format=3 uid="uid://2i8ugg76yq3l"]

[ext_resource type="Texture2D" uid="uid://cei7rdhbgjkgn" path="res://assets/Upgrade and help popup/sniper.png" id="1_h7tsb"]
[ext_resource type="Texture2D" uid="uid://dpcflf58jai2f" path="res://assets/Upgrade and help popup/sniper_pressed.png" id="2_dba86"]
[ext_resource type="Script" path="res://ui/upgrade_tab.gd" id="3_7ksgd"]

[node name="UpgradeTab" type="TextureButton"]
auto_translate_mode = 1
custom_minimum_size = Vector2(100, 100)
toggle_mode = true
texture_normal = ExtResource("1_h7tsb")
texture_pressed = ExtResource("2_dba86")
ignore_texture_size = true
stretch_mode = 5
script = ExtResource("3_7ksgd")

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
